--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coc-ai",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "dist/index.js",
   "files": [
@@ -38,7 +38,9 @@
     "coc": ">=0.0.80",
     "node": ">=18"
   },
-  "activationEvents": ["*"],
+  "activationEvents": [
+    "*"
+  ],
   "contributes": {
     "configuration": {
       "title": "coc-ai",
